fix vertical align to add number

--- a/src/css/forms/_radio.scss
+++ b/src/css/forms/_radio.scss
@@ -118,7 +118,7 @@
   font-size: 3em;
   line-height:1em;
   margin:2px;
-  vertical-align:middle;
+  vertical-align:bottom;
 }
 .radioRating label:hover {
 	transform: rotate(-15deg) scale(1.3);
